--- a/src/componentes/ambiente/ambiente.css
+++ b/src/componentes/ambiente/ambiente.css
@@ -49,7 +49,11 @@
 
 @media(max-width: 768px) {}
 
-@media(max-width: 600px) {}
+@media(max-width: 600px) {
+    .head h1{
+        font-size: 50px;
+    }
+}
 
 @media(max-width: 480px) {}
 
