comecando ajustes para celular home img

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -118,6 +118,12 @@
     }
 }
 
-@media(max-width: 480px) {}
+@media(max-width: 480px) {
+    .home {
+        width: 100vw;
+        height: 90vh;
+    }
+   
+}
 
 
