--- a/src/componentes/Services/services.css
+++ b/src/componentes/Services/services.css
@@ -120,7 +120,7 @@
         font-size: 40px;
     }
     .images_services .lista_images{
-        gap: 20px;
+        gap: 1.25rem;
     }
     .lista_images.active .images{
         max-width: 14rem;
