--- a/src/componentes/Ideias/ideias.css
+++ b/src/componentes/Ideias/ideias.css
@@ -12,11 +12,11 @@
 /* cada divisao das secoes */
 .sections {
     width: 100%;
-    height: 132px;
+    height: 8.25rem;
     display: flex;
     justify-content: space-between;
     align-items: start;
-    padding-top: 32px;
+    padding-top: 2rem;
     border-top: 1px var(--color-gray-100) solid;
     
 }
@@ -154,6 +154,23 @@
 
 }
 
-@media(max-width: 480px) {}
+@media(max-width: 480px) {
+    .options-list.options p{
+        font-size: 10px;
+        text-indent: -10px;
+    }
+    .sections {
+        height: 9rem;
+        padding-top: 2rem;
+        gap: 5px;
+    }
+    .options span{
+        margin-right: 0;
+    }
+    .options.opt-number{
+        width: 3.5625rem;
+    }
+
+}
 
 
