bottom home - 360px

--- a/src/pages/Home/componentesHome/BottomHome/bottomhome.css
+++ b/src/pages/Home/componentesHome/BottomHome/bottomhome.css
@@ -124,3 +124,13 @@
     }
 
 }
+
+@media(max-width: 360px){
+    .adress p{
+        font-size: 18px;
+    }
+    .links p{
+        font-size: 18px;
+    }
+
+}
