--- a/src/pages/Home/componentesHome/BottomHome/bottomhome.css
+++ b/src/pages/Home/componentesHome/BottomHome/bottomhome.css
@@ -115,6 +115,7 @@
     }
     .links p{
         font-size: 20px;
+        margin-bottom: 0;
     }
     .container_links {
         padding-left: 1rem;
