--- a/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
+++ b/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
@@ -8,7 +8,8 @@
 .grid-roulette{
     display: grid;
     grid-template-columns: 25% 50% 25%;
-    height: 55rem;
+    /* height: 55rem; */
+    height: 100vh;
 }
 /* parte esquerda */
 .left-roulette{
@@ -40,7 +41,7 @@
  /* container blour */
 .container-blur{
     width: 100%;
-    height: 328px;
+    height: 30vh;
     position: absolute;
     backdrop-filter: blur(5px);
     z-index: 2;
@@ -103,3 +104,22 @@
     margin-left: 60px;
 
 }
+
+/* responsivo medias */
+
+@media(max-width: 1400px) {}
+@media(max-width: 1280px) {
+    .middle-roulette .country h1{
+        font-size: 70px;
+    }
+}
+
+@media(max-width: 1200px) {}
+
+@media(max-width: 991px) {}
+
+@media(max-width: 768px) {}
+
+@media(max-width: 600px) {}
+
+@media(max-width: 480px) {}
