--- a/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
+++ b/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
@@ -66,6 +66,11 @@
    
 }
 .middle-roulette .country {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
     align-items: center;
     display: flex;
     margin-top: 10px;
@@ -110,11 +115,15 @@
 @media(max-width: 1400px) {}
 @media(max-width: 1280px) {
     .middle-roulette .country h1{
-        font-size: 70px;
+        font-size: 75px;
     }
 }
 
-@media(max-width: 1200px) {}
+@media(max-width: 1200px) {
+    .middle-roulette .country h1{
+        font-size: 60px;
+    }
+}
 
 @media(max-width: 991px) {}
 
