--- a/src/pages/About/componentesAbout/Principios/principios.css
+++ b/src/pages/About/componentesAbout/Principios/principios.css
@@ -76,7 +76,15 @@
     line-height: 130%;
 }
 
-@media(max-width: 1280px) {}
+@media(max-width: 1280px) {
+    .container-principios .prin-1{
+        max-width: 24rem;
+        height: 22rem;
+    }
+    .hide-on-mobile{
+        display: none;
+    }
+}
 
 @media(max-width: 1200px) {}
 
