--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -44,3 +44,27 @@
     margin-top: 9.875rem;
 
 }
+
+/* responsivo medias */
+
+@media(max-width: 1400px) {}
+
+@media(max-width: 1280px) {}
+
+@media(max-width: 1200px) {}
+
+@media(max-width: 991px) {
+    .about-us h1{
+        font-size: 70px;
+    }
+    .about-us h2{
+        font-size: 20px;
+    }
+
+}
+
+@media(max-width: 768px) {}
+
+@media(max-width: 600px) {}
+
+@media(max-width: 480px) {}
