--- a/src/pages/About/componentesAbout/Ideias_About/ideias_about.css
+++ b/src/pages/About/componentesAbout/Ideias_About/ideias_about.css
@@ -29,7 +29,11 @@
 
 @media(max-width: 1400px) {}
 
-@media(max-width: 1280px) {}
+@media(max-width: 1280px) {
+    .ideia-text{
+        width: 50%;
+    }
+}
 
 @media(max-width: 1200px) {}
 
