--- a/src/pages/About/componentesAbout/Principios/principios.css
+++ b/src/pages/About/componentesAbout/Principios/principios.css
@@ -88,7 +88,16 @@
 
 @media(max-width: 1200px) {}
 
-@media(max-width: 991px) {}
+@media(max-width: 991px) {
+    .container-principios .prin-1{
+        max-width: 20rem;
+        height: 18rem;
+    }
+    .container-principios .prin-1.sec{
+        top: 4rem;
+        left: 55%;
+    }
+}
 
 @media(max-width: 768px) {}
 
