--- a/src/componentes/InfinitTimeLine/infinit.css
+++ b/src/componentes/InfinitTimeLine/infinit.css
@@ -97,3 +97,20 @@
   animation-delay:calc(40s / 10 * (10 - 10) * -1) ;
 
 }
+
+
+/* responsivo medias */
+
+@media(max-width: 1400px) {}
+
+@media(max-width: 1280px) {}
+
+@media(max-width: 1200px) {}
+
+@media(max-width: 991px) {}
+
+@media(max-width: 768px) {}
+
+@media(max-width: 600px) {}
+
+@media(max-width: 480px) {}
