fontes em fundadores - 600px

--- a/src/pages/About/componentesAbout/Fundadores/fundadores.css
+++ b/src/pages/About/componentesAbout/Fundadores/fundadores.css
@@ -106,6 +106,12 @@
         width: 17.5rem;
         height: 18rem;
     }
+    .fund-name h2 {
+        font-size: 40px;
+    }
+    .fund-name p{
+        font-size: 14px;
+    }
 }
 
 @media(max-width: 480px) {}
