diminuindo fonte da roleta - 480px

--- a/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
+++ b/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
@@ -162,4 +162,11 @@
 
 }
 
-@media(max-width: 480px) {}
+@media(max-width: 480px) {
+    .middle-roulette .country h1{
+        font-size: 30px;
+    }
+    .middle-roulette .country p{
+        margin-left: 0.9375rem;
+    }
+}
