--- a/src/pages/About/componentesAbout/Ideias_About/ideias_about.css
+++ b/src/pages/About/componentesAbout/Ideias_About/ideias_about.css
@@ -65,4 +65,9 @@
 
 }
 
-@media(max-width: 480px) {}
+@media(max-width: 480px) {
+    .only{
+        flex-direction: column;
+        gap: 3rem;
+    }
+}
