--- a/src/pages/About/componentesAbout/ProjectsFeedBack/projectsfeedback.css
+++ b/src/pages/About/componentesAbout/ProjectsFeedBack/projectsfeedback.css
@@ -170,7 +170,19 @@
     }
 }
 
-@media(max-width: 480px) {}
+@media(max-width: 480px) {
+    .project-feedback{
+        grid-template-columns: 1fr; 
+        gap: 0.625rem; 
+
+    }
+    .img-project{
+        height: 21.875rem;
+    }
+    .project-feedback .img-project img{
+        max-width: 100%;
+    }
+}
 
 @media(max-width: 360px){}
 
