--- a/src/componentes/NavBar/navbar.css
+++ b/src/componentes/NavBar/navbar.css
@@ -276,16 +276,6 @@
     }
 }
 @media(max-width: 1280px) {
-    /* .links-container .links-img img {
-        height: 20rem;
-    }
-    .link-menu h1 {
-        font-size: 70px;
-    }
-    .links-menu .link-menu{
-        height: 70px;
-        
-    } */
     .links-menu .link-menu {
         height: 5.625rem;
     }
@@ -302,7 +292,19 @@
 
 @media(max-width: 1200px) {}
 
-@media(max-width: 991px) {}
+@media(max-width: 991px) {
+    .links-container .links-img img {
+        width: 33.75rem;
+    }
+    .link-menu h1 {
+        font-size: 50px;
+    }
+    .links-menu .link-menu img{
+        right: 0;
+        width: 40px;
+        height: 32px;
+    }
+}
 
 @media(max-width: 768px) {}
 
