--- a/src/componentes/NavBar/navbar.css
+++ b/src/componentes/NavBar/navbar.css
@@ -344,4 +344,18 @@
     .pt-br{
         display: none;
     }
+    .links-img{
+        display: none;
+    }
+    .links-container .links-menu{
+        width: 100%;
+    }
+    .navbar-menu{
+        padding: 0px 15px;
+    }
+}
+@media(max-width:360px){
+    .footer-menu{
+        padding: 0px 15px;
+    }
 }
