arrumando quebra de linha

--- a/src/componentes/Ideias/ideias.css
+++ b/src/componentes/Ideias/ideias.css
@@ -137,6 +137,7 @@
     .options-list.options p{
         font-size: 9px;
         text-indent: -10px;
+        white-space: nowrap;
     }
     /* .options-list.options{
         padding-left: 10px;
