--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,9 @@ html, body{
 a{
   cursor: pointer;
 }
+.no-emoji {
+  font-family: Arial, Helvetica, sans-serif; 
+}
 
 @media(max-width: 480px) {
   .grid-global{
