--- a/src/componentes/Ideias/ideias.css
+++ b/src/componentes/Ideias/ideias.css
@@ -187,6 +187,7 @@
 }
 
 @media(max-width: 480px) {
+
     .options-list.options p{
         font-size: 8px;
         text-indent: -10px;
@@ -194,13 +195,23 @@
     .sections {
         height: 9rem;
         padding-top: 2rem;
-        gap: 5px;
+        gap: 0.5rem;
     }
     .options span{
-        margin-right: 0;
+        margin-right: 0.9375rem;
     }
     .options.opt-number{
         width: 3.5625rem;
+    }
+    .options{
+        width: 100%;
+    }
+    .options.text{
+        width: 100%;
+        max-width: 3.9375rem;
+    }
+    .sections a{
+        font-size: 13px;
     }
 
 }
@@ -210,7 +221,7 @@
         padding-left: 0;
     }
     .sections{
-        gap: 0.9375rem;
+        gap: 10px;
     }
     .sections a{
         font-size: 12px;
