--- a/src/componentes/Solucoes/solucoes.css
+++ b/src/componentes/Solucoes/solucoes.css
@@ -125,14 +125,29 @@
 }
 
 .texts_studio a {
-    margin-top: 68px;
     color: var(--color-gray-200);
     font-weight: 400;
     font-size: 16px;
+
+
+}
+
+.seecases{
+    width: 100%;
+    max-width: max-content;
+    display: flex;
+    margin-top: 68px;
+    align-items: center;
     border-bottom: 1px solid;
     padding-bottom: 5px;
-    margin-left: 5px;
-
+}
+.seecases span{
+    margin-left: 10px;
+}
+.seecases img{
+    width: 100%;
+    max-width: 12px;
+    height: 12px;
 
 }
 
