--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -89,7 +89,38 @@
     bottom: 25px;
     justify-content: space-between;
     align-items: center;
+   
+}
+.see-cases .all-cases img{
+    width: 100%;
+    max-width: 12px;
+    height: 12px;
 
+}
+.sec-explore{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+}
+.sec-explore img{
+    width: 100%;
+    max-width: 0.75rem;
+    height: 0.75rem;
+}
+.sec-explore span{
+    margin-left: 0.5rem;
+}
+.all-cases{
+    width: 100%;
+    max-width: max-content;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid;
+    padding-bottom: 5px;
+}
+.all-cases span{
+    margin-left: 0.625rem;
 }
 .all-cases a{
     font-weight: 450;
