--- a/src/componentes/ambiente/ambiente.css
+++ b/src/componentes/ambiente/ambiente.css
@@ -21,25 +21,15 @@
     line-height: 120%;
 }
 .head img{
-    width: 22px;
-    height: 22px;
+    width: 1.375rem;
+    height: 1.375rem;
 }
 
 
-.galeria img{
-    width:500px;
-    height: 800px;
-}
 
 /* responsivo medias */
 
-@media(max-width: 1440px) {
-    .galeria img{
-        width:23.1875rem;
-        height: 36.125rem;
-    }
-  
-}
+@media(max-width: 1440px) {}
 
 @media(max-width: 1280px) {}
 
@@ -52,9 +42,6 @@
 @media(max-width: 600px) {
     .head h1{
         font-size: 50px;
-    }
-    .galeria img{
-        height: 28rem;
     }
     .container_ambiente .grid-global{
         padding: 0px;
@@ -70,9 +57,6 @@
     }
     .head h1 {
         font-size: 2.5rem;
-    }
-    .galeria img{
-        height: 30rem;
     }
     .container_ambiente .grid-global{
         padding: 0px;
