--- a/src/pages/About/componentesAbout/Principios/principios.css
+++ b/src/pages/About/componentesAbout/Principios/principios.css
@@ -1,7 +1,7 @@
 .container-principios{
     width: 100%;
     max-width: 100%;
-    height: 1200px;
+    height: 75rem;
     position: relative;
 }
 .container-principios .principios{
