--- a/src/pages/About/componentesAbout/Principios/principios.css
+++ b/src/pages/About/componentesAbout/Principios/principios.css
@@ -1,8 +1,10 @@
 .container-principios{
     width: 100%;
     max-width: 100%;
-    height: 75rem;
+    /* height: 75rem; */
+    height: 130vh;
     position: relative;
+    border: 2px red solid;
 }
 .container-principios .principios{
     position: absolute;
